; ModuleID = '/home/carl/AnghaBench/systemd/src/fstab-generator/extr_fstab-generator.c_mount_in_initrd.c'
source_filename = "/home/carl/AnghaBench/systemd/src/fstab-generator/extr_fstab-generator.c_mount_in_initrd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mntent = type { i32, i32 }

@.str = private unnamed_addr constant [16 x i8] c"x-initrd.mount\00\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"/usr\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mntent*)* @mount_in_initrd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mount_in_initrd(%struct.mntent* %0) #0 {
  %2 = alloca %struct.mntent*, align 8
  store %struct.mntent* %0, %struct.mntent** %2, align 8
  %3 = load %struct.mntent*, %struct.mntent** %2, align 8
  %4 = call i32 @assert(%struct.mntent* %3)
  %5 = load %struct.mntent*, %struct.mntent** %2, align 8
  %6 = getelementptr inbounds %struct.mntent, %struct.mntent* %5, i32 0, i32 1
  %7 = load i32, i32* %6, align 4
  %8 = call i64 @fstab_test_option(i32 %7, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0))
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %16, label %10

10:                                               ; preds = %1
  %11 = load %struct.mntent*, %struct.mntent** %2, align 8
  %12 = getelementptr inbounds %struct.mntent, %struct.mntent* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i64 @streq(i32 %13, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %15 = icmp ne i64 %14, 0
  br label %16

16:                                               ; preds = %10, %1
  %17 = phi i1 [ true, %1 ], [ %15, %10 ]
  %18 = zext i1 %17 to i32
  ret i32 %18
}

declare dso_local i32 @assert(%struct.mntent*) #1

declare dso_local i64 @fstab_test_option(i32, i8*) #1

declare dso_local i64 @streq(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
